plugins {
    id 'java'
}

group 'io.github.edsuns.screensnap'
version '1.0-SNAPSHOT'

sourceCompatibility = 9

// Avoid encoding issue
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

repositories {
    mavenCentral()
}

dependencies {
//    testCompile group: 'junit', name: 'junit', version: '4.12'

    // For GlobalHotKey
    implementation("com.github.tulskiy:jkeymaster:1.3")
    implementation("org.slf4j:slf4j-api:2.0.7")
    implementation("org.slf4j:slf4j-nop:2.0.7")

    // QRCode parser
    implementation("com.google.zxing:javase:3.5.2")
}

compileJava{
    options.compilerArgs.add( "--add-exports=java.desktop/sun.awt=ALL-UNNAMED")
    options.compilerArgs.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED")
}

compileTestJava{
    options.compilerArgs.add( "--add-exports=java.desktop/sun.awt=ALL-UNNAMED")
    options.compilerArgs.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED")
}
